--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,8 @@
 {
-  "version": 2,
   "rewrites": [
     {
-      "source": "/club/:code*",
-      "destination": "/club.html?code=:code"
-    }
-  ],
-  "redirects": [
-    {
-      "source": "/clubs",
-      "destination": "/",
-      "permanent": false
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
+      "source": "/club/:code",
+      "destination": "/club.html"
     }
   ]
 }
