--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
       "source": "/club/:code",
       "destination": "/club.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
